# Realtime-Video-using-FFmpeg-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
